Nav overflow problem related fix

--- a/styles/index-page.css
+++ b/styles/index-page.css
@@ -78,6 +78,7 @@ nav {
     float: right;
     height: 100%;
     margin: 0;
+    width: 70%;
 }
 
 nav ul li {
